--- a/resume.tex
+++ b/resume.tex
@@ -9,7 +9,7 @@
 \lastupdated % Print the Last Updated text at the top right
 
 \namesection{Linda (Hanzhang)}{Zheng}{ % Your name
-\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 214-399-4770} % Your contacv information
+\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242} % Your contacv information
 }
 
 %----------------------------------------------------------------------------------------
@@ -103,11 +103,27 @@ iOS
 
 \section{Experience}
 
+\runsubsection{Capital One}
+\descript{| Software Engineer}
+
+\location{July 2016 – Present | Plano, TX}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Promotion from Associate to Senior Associate after 1 year.
+\item Developed Customer Feedback Listener as a standalone Angular Component to be easily integrated with all Financial Services applications. Backend developed in Java, deployed using AWS with PostgreSQL database.
+\item Built developer platform for Business Analysts and Data Scientists as a "playground" to explore all Marketing data collected by Capital One, using Open Source Zeppelin Project, and adding additional features such as connection to Redshift Cluster, Schema Browser, SQL Parser/Linter and Visualizer. 
+\item Programmed Robot Arm using RNN Machine Learning algorithms to imitate handwriting for "Surprise and Delight" cards to customers. 
+\item Technologies include AWS, Java with Spring, Angular with Typescript, Python.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
 \runsubsection{Shape Security}
 \descript{| KPCB Fellow + Software Engineering Intern}
 
 \location{May 2015 – Aug 2015 | Mountain View, CA}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item 60 out of 2500+ applicants chosen to be a KPCB Engineering Fellow 2015.
 \item Shape Security is a leading Cyber Security Startup.
@@ -158,6 +174,24 @@ iOS
 
 \sectionspace % Some whitespace after the section
 
+%----------------------------------------------------------------------------------------
+
+\end{minipage} % The end of the right column
+
+%----------------------------------------------------------------------------------------
+% SECOND PAGE (EXAMPLE)
+%----------------------------------------------------------------------------------------
+
+\newpage % Start a new page
+
+\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
+
+\section{}
+
+\end{minipage} % The end of the left column
+\hfill
+\begin{minipage}[t]{0.66\textwidth} % The right column takes up 66% of the text width of the page
+
 %------------------------------------------------
 % Other projects
 %------------------------------------------------
@@ -202,27 +236,7 @@ Multi-player, cross-platform game, combining the game-play mechanics of Doodle J
 
 \sectionspace % Some whitespace after the section
 
-%----------------------------------------------------------------------------------------
-
 \end{minipage} % The end of the right column
-
-%----------------------------------------------------------------------------------------
-% SECOND PAGE (EXAMPLE)
-%----------------------------------------------------------------------------------------
-
-%\newpage % Start a new page
-
-%\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
-
-%\section{Example Section}
-
-%\end{minipage} % The end of the left column
-%\hfill
-%\begin{minipage}[t]{0.66\textwidth} % The right column takes up 66% of the text width of the page
-
-%\section{Example Section 2}
-
-%\end{minipage} % The end of the right column
 
 %----------------------------------------------------------------------------------------
 
