updated resume and added gitignore

--- a/resume.tex
+++ b/resume.tex
@@ -68,9 +68,9 @@ Python \textbullet{}
 JavaScript/Typescript \textbullet{}
 R \textbullet{}
 Matlab \textbullet{}
+HTML/CSS \textbullet{}
 C \textbullet{}
 C++ \textbullet{}
-CSS \textbullet{}
 Kotlin \textbullet{}
 Swift
 
@@ -106,14 +106,15 @@ iOS
 \runsubsection{Capital One}
 \descript{| Software Engineer}
 
-\location{July 2016 – Present | Plano, TX}
+\location{July 2016 ? Present | Plano, TX}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item Promotion from Associate to Senior Associate after 1 year.
-\item Developed Customer Feedback Listener as a standalone Angular Component to be easily integrated with all Financial Services applications. Backend developed in Java, deployed using AWS with PostgreSQL database.
-\item Built developer platform for Business Analysts and Data Scientists as a "playground" to explore all Marketing data collected by Capital One, using Open Source Zeppelin Project, and adding additional features such as connection to Redshift Cluster, Schema Browser, SQL Parser/Linter and Visualizer. 
-\item Programmed Robot Arm using RNN Machine Learning algorithms to imitate handwriting for "Surprise and Delight" cards to customers. 
-\item Technologies include AWS, Java with Spring, Angular with Typescript, Python.
+\item Developed a standalone Angular Widget that was easily integrated with all Financial Services applications to capture customer feedback throughout the loan application process. Backend API developed in Java, deployed using AWS with PostgreSQL database, with Splunk dashboard for Business Analysts.
+\item Built developer platform for Business Analysts and Data Scientists as a "playground" to explore all Marketing data collected by Capital One, using Open Source Zeppelin Project, and adding additional features such as connection to Redshift Cluster, Schema Browser powered by ElasticSearch, SQL Parser/Linter and Visualizer. 
+\item Designed and implemented Automated Handwriting System. Built UI in Angular 2 that allowed Agents to enter text, send text to API (Python Flask) for processing and handwriting generation using template fonts and Recursive Neural Network Machine Learning algorithms trained on crowdsourced handwriting database. Wrote client software for Robot Arm (AxiDraw V3) to poll Server for new jobs to "write" and sends back job status information. UI includes dashboard of job information and previously completed jobs. 
+\item Developed enterprise-wide API as an abstraction for Cloud file storage and retrieval (currently S3). Built as part of a larger initiative to resolve storage space issues in the on-premise Data Center.
+\item Designed and implemented automated data migration system with weekly queries to extract files from on-premise Data Center and move them to the Cloud with unique IDs for fast retrieval. 
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
@@ -123,11 +124,10 @@ iOS
 \runsubsection{Shape Security}
 \descript{| KPCB Fellow + Software Engineering Intern}
 
-\location{May 2015 – Aug 2015 | Mountain View, CA}
+\location{May 2015 ? Aug 2015 | Mountain View, CA}
 \begin{tightitemize}
-\item 60 out of 2500+ applicants chosen to be a KPCB Engineering Fellow 2015.
-\item Shape Security is a leading Cyber Security Startup.
-\item Upgraded Shift, Shape's opence source project, to support tooling for ECMAScript 2015. Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer.
+\item 60 out of 2500+ applicants chosen to be a Kleiner, Perkins, Caufield and Byers Engineering Fellow of 2015. Assigned to portfolio company, Shape Security, a leading Cyber Security Startup.
+\item Upgraded Shift, Shape's open source project, to support tooling for ECMAScript 2015. Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer.
 \item Speaker at South Bay JavaScript MeetUp.
 \end{tightitemize}
 
@@ -138,7 +138,7 @@ iOS
 \runsubsection{PROS}
 \descript{| Software Engineering Intern}
 
-\location{May 2014 – Aug 2014 | Houston, TX}
+\location{May 2014 ? Aug 2014 | Houston, TX}
 \begin{tightitemize}
 \item Built tool to parse log files of important business systems and interactively display data using ELK stack.
 \item Built nightly email task to summarize flight booking statistics, using map-reduce algorithms.
@@ -150,26 +150,14 @@ iOS
 
 %------------------------------------------------
 
-\runsubsection{Rice Center for Digital Learning and Scholarship}
-\descript{| Student Web Programmer}
-
-\location{Sep 2013 – Dec 2013 | Houston, TX}
-\begin{tightitemize}
-\item Built webpage with interactive practice widgets/quizzes for students across various subjects.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-
 \runsubsection{Jones McClure Publishing}
 \descript{| Software Engineering Intern}
 
-\location{June 2013 – Sep 2013 | Houston, TX}
+\location{June 2013 ? Sep 2013 | Houston, TX}
 \begin{tightitemize}
 \item Built two dynamic web applications and mobile-compatible versions (Income Tax Calculator and Child Support Calculator).
 \item Built Administration site to track and display internal business data.
-\item Wrote plug-in for FogBugs that allows non-IT employees to report bugs within the software. 
+\item Wrote plug-in for FogBugs that allows non-IT employees to report bugs within the software to the Engineering Team.
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
@@ -198,10 +186,22 @@ iOS
 
 \section{Other Projects}
 
+%------------------------------------------------
+
+\runsubsection{Simple War}
+\descript{| Personal Project}
+
+\location{2018 | Anywhere}
+REST-ful, turn-based game with online match-making. Front-end built in Angular 4, with Java as the API and game-engine layer, MongoDB for game data storage, and websockets for real-time board updates. Players take turns placing cards (troops, walls, special) on the board. Player wins when a certain number of points have been scored. Points are earned from successfully moving troops across the board to the opponent's side, while the opponent places cards to stop advancement. 
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
 \runsubsection{Recommendation System Competition}
 \descript{| Term Project}
 
-\location{Sep 2015 – Dec 2015 | Houston, TX}
+\location{Sep 2015 ? Dec 2015 | Houston, TX}
 Class competition to build a system with the best recommendations for online dating profiles based on users' past ratings, using various statistical learning algorithms.
 
 \sectionspace % Some whitespace after the section
@@ -211,7 +211,7 @@ Class competition to build a system with the best recommendations for online dat
 \runsubsection{Pac-Mite Competition}
 \descript{| Term Project}
 
-\location{Sep 2015 – Dec 2015 | Houston, TX}
+\location{Sep 2015 ? Dec 2015 | Houston, TX}
 Class competition to find the best gene for a PAC-Mite species, using various AI and search algorithms that we learned throughout the semester.
 
 \sectionspace % Some whitespace after the section
@@ -231,7 +231,7 @@ Built an Android app that detects certain signals/gestures and sends a customize
 \runsubsection{Computer Game Creation}
 \descript{| Term Project}
 
-\location{Jan 2015 – May 2015 | Houston, TX}
+\location{Jan 2015 ? May 2015 | Houston, TX}
 Multi-player, cross-platform game, combining the game-play mechanics of Doodle Jump, and competitive nature of Mario Kart.
 
 \sectionspace % Some whitespace after the section
