added ecog section

--- a/resume.tex
+++ b/resume.tex
@@ -198,6 +198,15 @@ REST-ful, turn-based game with online match-making. Front-end built in Angular 4
 
 %------------------------------------------------
 
+\runsubsection{Decoding the Brain from Electrocorticographical Readings}
+\descript{| Undergraduate Senior Thesis in Statistics}
+
+\location{Jan 2016 ? May 2016 | Houston, TX}
+Analyzed ECoG data of brain frequencies obtained from 42 nodes placed on the brain of an epileptic patient while the patient watched videos of a person saying "rock" or "rain" with blurry or clear visual and audio. Goal was to be able to classify the type of stimuli based on the brain frequencies data. Used 3D and 4D Higher Order Partial Least Squares Methods for analysis. Found strong effects of priming in the brain (audio section of the brain became activated when visual start even if there is no audio yet, and vice-versa).
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
 \runsubsection{Recommendation System Competition}
 \descript{| Term Project}
 
