--- a/resume.tex
+++ b/resume.tex
@@ -16,7 +16,7 @@
 % LEFT COLUMN
 %----------------------------------------------------------------------------------------
 
-\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
+\begin{minipage}[t]{0.29\textwidth} % The left column takes up 33% of the text width of the page
 
 %------------------------------------------------
 % Education
@@ -27,7 +27,7 @@
 \subsection{Rice University}
 
 \descript{BS in Computer Science, Statistics}
-\location{Graduated May 2016 | Houston, TX \\ GPA: 3.7}
+\location{Aug 2012 - May 2016 \\ GPA: 3.7}
 
 %------------------------------------------------
 % Coursework
@@ -36,22 +36,24 @@
 \section{Coursework}
 
 \subsection{Computer Science}
-Artificial Intelligence\\
-Adv. Computer Game Creation \& Design\\
-Operating Systems\\
-Concurrent Programming\\
-Database Systems and Design\\
-Object Oriented Programming\\
-Compilers\\
-Adv. Algorithms\\
+\textbullet{} Artificial Intelligence\\
+\textbullet{} Game Creation \& Design\\
+\textbullet{} Operating Systems\\
+\textbullet{} Concurrent Programming\\
+\textbullet{} Database Systems and Design\\
+\textbullet{} Object Oriented Programming\\
+\textbullet{} Compilers\\
+\textbullet{} Data Structures\\
+\textbullet{} Advanced Algorithms\\
 
 \sectionspace % Some whitespace after the section
 
 \subsection{Statistics}
-Data Mining \& Statistical Learning\\
-Financial Time Series\\
-Regression Analysis\\
-Bioinformatics\\
+\textbullet{} Data Mining\\
+\textbullet{} Statistical Learning\\
+\textbullet{} Financial Time Series\\
+\textbullet{} Regression Analysis\\
+\textbullet{} Bioinformatics\\
 
 \sectionspace % Some whitespace after the section
 
@@ -63,28 +65,30 @@ Bioinformatics\\
 
 \subsection{Programming}
 
-Java \textbullet{}
-Python \textbullet{}
-JavaScript/Typescript \textbullet{}
-R \textbullet{}
-Matlab \textbullet{}
-HTML/CSS \textbullet{}
-C \textbullet{}
-C++ \textbullet{}
-Kotlin \textbullet{}
-Swift
+\textbullet{} Java\\
+\textbullet{} Python\\
+\textbullet{} JavaScript/Typescript\\
+\textbullet{} HTML/CSS\\
+\textbullet{} SQL\\
+\textbullet{} R\\
+\textbullet{} Matlab\\
+\textbullet{} C\\
+\textbullet{} C++
 
 \sectionspace % Some whitespace after the section
 
 \subsection{Frameworks}
-Spring \textbullet{}
-Angular \textbullet{}
-React \textbullet{}
-AWS \textbullet{}
-Android \textbullet{}
-iOS
+\textbullet{} Spring\\
+\textbullet{} Angular\\
+\textbullet{} React\\
+\textbullet{} AWS\\
+\textbullet{} Android\\
+\textbullet{} iOS\\
 
 \sectionspace % Some whitespace after the section
+
+\subsection{Github}
+\textbullet{} https://github.com/yaylinda
 
 %----------------------------------------------------------------------------------------
 
@@ -95,7 +99,7 @@ iOS
 % RIGHT COLUMN
 %----------------------------------------------------------------------------------------
 %
-\begin{minipage}[t]{0.66\textwidth} % The right column takes up 66% of the text width of the page
+\begin{minipage}[t]{0.7\textwidth} % The right column takes up 66% of the text width of the page
 
 %------------------------------------------------
 % Experience
@@ -106,15 +110,16 @@ iOS
 \runsubsection{Capital One}
 \descript{| Software Engineer}
 
-\location{July 2016 ? Present | Plano, TX}
+\location{July 2016 - Present | Plano, TX}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item Promotion from Associate to Senior Associate after 1 year.
-\item Developed a standalone Angular Widget that was easily integrated with all Financial Services applications to capture customer feedback throughout the loan application process. Backend API developed in Java, deployed using AWS with PostgreSQL database, with Splunk dashboard for Business Analysts.
-\item Built developer platform for Business Analysts and Data Scientists as a "playground" to explore all Marketing data collected by Capital One, using Open Source Zeppelin Project, and adding additional features such as connection to Redshift Cluster, Schema Browser powered by ElasticSearch, SQL Parser/Linter and Visualizer. 
-\item Designed and implemented Automated Handwriting System. Built UI in Angular 2 that allowed Agents to enter text, send text to API (Python Flask) for processing and handwriting generation using template fonts and Recursive Neural Network Machine Learning algorithms trained on crowdsourced handwriting database. Wrote client software for Robot Arm (AxiDraw V3) to poll Server for new jobs to "write" and sends back job status information. UI includes dashboard of job information and previously completed jobs. 
-\item Developed enterprise-wide API as an abstraction for Cloud file storage and retrieval (currently S3). Built as part of a larger initiative to resolve storage space issues in the on-premise Data Center.
-\item Designed and implemented automated data migration system with weekly queries to extract files from on-premise Data Center and move them to the Cloud with unique IDs for fast retrieval. 
+\item Developed standalone Angular Widget that was easily integrated with all Financial Services applications to capture customer feedback. (Java, Angular, AWS, PostgreSQL, Splunk).
+\item Built ad-hoc data analysis platform using open-source Apache Zeppelin. Added additional features: connection to Redshift Clusters, schema browser, SQL parser/linter/visualizer. (Java, Angular, AWS, Redshift, ElasticSearch, Spark, R, Python).
+\item Implemented system for Call Center agents to record notes about customer communications for chats and phone calls. (Java, Angular, AWS, PostgreSQL).
+\item Designed and implemented Automated Handwriting System using RNN Machine Learning Algorithms, with UI, server, and polling client to write greeting cards to long-term customers (Python, Tensorflow, Angular, AxiDraw V3).
+\item Developed enterprise-wide API for Cloud file storage abstraction. Built as part of a larger initiative to resolve storage space issues in the on-premise Data Center. (Java, AWS, S3, SQL).
+\item Designed and implemented automated data migration system with weekly queries to extract files from on-premise Data Center and move them to the Cloud with unique IDs for fast retrieval. (Java, AWS, S3, SQS, CFT, SQL). 
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
@@ -124,11 +129,11 @@ iOS
 \runsubsection{Shape Security}
 \descript{| KPCB Fellow + Software Engineering Intern}
 
-\location{May 2015 ? Aug 2015 | Mountain View, CA}
+\location{May 2015 - Aug 2015 | Mountain View, CA}
 \begin{tightitemize}
-\item 60 out of 2500+ applicants chosen to be a Kleiner, Perkins, Caufield and Byers Engineering Fellow of 2015. Assigned to portfolio company, Shape Security, a leading Cyber Security Startup.
-\item Upgraded Shift, Shape's open source project, to support tooling for ECMAScript 2015. Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer.
-\item Speaker at South Bay JavaScript MeetUp.
+\item One of 60 out of 2500+ applicants chosen to be a Kleiner, Perkins, Caufield and Byers Engineering Fellow of 2015
+\item Upgraded Shape's open-source project, to support tooling for ECMAScript 2015. (Java, Javascript).
+\item Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer.
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
@@ -138,12 +143,12 @@ iOS
 \runsubsection{PROS}
 \descript{| Software Engineering Intern}
 
-\location{May 2014 ? Aug 2014 | Houston, TX}
+\location{May 2014 - Aug 2014 | Houston, TX}
 \begin{tightitemize}
-\item Built tool to parse log files of important business systems and interactively display data using ELK stack.
-\item Built nightly email task to summarize flight booking statistics, using map-reduce algorithms.
-\item Created Notification Service and Notes Service for Travel Agent System.
-\item Built validation utility to validate input data from users.
+\item Built tool to parse log files of various business systems and interactively display data using ELK stack.
+\item Built nightly email task to summarize flight booking statistics, using map-reduce algorithms in Java with a Cassandra database. (Java, Cassandra).
+\item Created APIs for Notification Service and Notes Service for Travel Agent System. (Java).
+\item Built validation utility to validate input data from users. (Java, SQL).
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
@@ -153,10 +158,10 @@ iOS
 \runsubsection{Jones McClure Publishing}
 \descript{| Software Engineering Intern}
 
-\location{June 2013 ? Sep 2013 | Houston, TX}
+\location{June 2013 - Sep 2013 | Houston, TX}
 \begin{tightitemize}
-\item Built two dynamic web applications and mobile-compatible versions (Income Tax Calculator and Child Support Calculator).
-\item Built Administration site to track and display internal business data.
+\item Built two dynamic web applications and mobile-compatible versions: Income Tax Calculator, Child Support Calculator. (C\#, Javascript/HTML/CSS).
+\item Built Administration site to track and display internal business data. (C\#, Javascript/HTML/CSS).
 \item Wrote plug-in for FogBugs that allows non-IT employees to report bugs within the software to the Engineering Team.
 \end{tightitemize}
 
@@ -172,13 +177,13 @@ iOS
 
 \newpage % Start a new page
 
-\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
+\begin{minipage}[t]{0.29\textwidth} % The left column takes up 33% of the text width of the page
 
 \section{}
 
 \end{minipage} % The end of the left column
 \hfill
-\begin{minipage}[t]{0.66\textwidth} % The right column takes up 66% of the text width of the page
+\begin{minipage}[t]{0.7\textwidth} % The right column takes up 66% of the text width of the page
 
 %------------------------------------------------
 % Other projects
@@ -192,7 +197,16 @@ iOS
 \descript{| Personal Project}
 
 \location{2018 | Anywhere}
-REST-ful, turn-based game with online match-making. Front-end built in Angular 4, with Java as the API and game-engine layer, MongoDB for game data storage, and websockets for real-time board updates. Players take turns placing cards (troops, walls, special) on the board. Player wins when a certain number of points have been scored. Points are earned from successfully moving troops across the board to the opponent's side, while the opponent places cards to stop advancement. 
+REST-ful, turn-based game with online match-making. Front-end built in Angular 4, with Java as the API and game-engine layer, MongoDB for game data storage, and websockets for real-time game-board updates. Players take turns placing cards (troops, walls, special) on the board. Player wins when a certain number of points have been scored. Points are earned from successfully moving troops across the board to the opponent's side, while the opponent places cards to stop advancement. 
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+\runsubsection{Parking Navigator}
+\descript{| Company Hackathon}
+
+\location{Aug 2017 | Plano, TX}
+Project for internal Hackathon hosted by Capital One. Drone flies around campus on a pre-set path, taking aerial shots of parking lot. Sends pictures to server for processing, using edge detection to find empty parking spots. 
 
 \sectionspace % Some whitespace after the section
 
@@ -201,7 +215,7 @@ REST-ful, turn-based game with online match-making. Front-end built in Angular 4
 \runsubsection{Decoding the Brain from Electrocorticographical Readings}
 \descript{| Undergraduate Senior Thesis in Statistics}
 
-\location{Jan 2016 ? May 2016 | Houston, TX}
+\location{Jan 2016 - May 2016 | Houston, TX}
 Analyzed ECoG data of brain frequencies obtained from 42 nodes placed on the brain of an epileptic patient while the patient watched videos of a person saying "rock" or "rain" with blurry or clear visual and audio. Goal was to be able to classify the type of stimuli based on the brain frequencies data. Used 3D and 4D Higher Order Partial Least Squares Methods for analysis. Found strong effects of priming in the brain (audio section of the brain became activated when visual start even if there is no audio yet, and vice-versa).
 
 \sectionspace % Some whitespace after the section
@@ -210,7 +224,7 @@ Analyzed ECoG data of brain frequencies obtained from 42 nodes placed on the bra
 \runsubsection{Recommendation System Competition}
 \descript{| Term Project}
 
-\location{Sep 2015 ? Dec 2015 | Houston, TX}
+\location{Sep 2015 - Dec 2015 | Houston, TX}
 Class competition to build a system with the best recommendations for online dating profiles based on users' past ratings, using various statistical learning algorithms.
 
 \sectionspace % Some whitespace after the section
@@ -220,7 +234,7 @@ Class competition to build a system with the best recommendations for online dat
 \runsubsection{Pac-Mite Competition}
 \descript{| Term Project}
 
-\location{Sep 2015 ? Dec 2015 | Houston, TX}
+\location{Sep 2015 - Dec 2015 | Houston, TX}
 Class competition to find the best gene for a PAC-Mite species, using various AI and search algorithms that we learned throughout the semester.
 
 \sectionspace % Some whitespace after the section
@@ -240,7 +254,7 @@ Built an Android app that detects certain signals/gestures and sends a customize
 \runsubsection{Computer Game Creation}
 \descript{| Term Project}
 
-\location{Jan 2015 ? May 2015 | Houston, TX}
+\location{Jan 2015 - May 2015 | Houston, TX}
 Multi-player, cross-platform game, combining the game-play mechanics of Doodle Jump, and competitive nature of Mario Kart.
 
 \sectionspace % Some whitespace after the section
