updated dependent files of resume.txt. updated content of resume

--- a/deedy-resume.cls
+++ b/deedy-resume.cls
@@ -1,98 +1,86 @@
-%----------------------------------------------------------------------------------------
-% CLASS OPTIONS AND REQUIRED PACKAGES
-%----------------------------------------------------------------------------------------
-
+% Intro Options
 \ProvidesClass{deedy-resume}[2014/04/30 CV class]
 \NeedsTeXFormat{LaTeX2e}
-\DeclareOption*{\PassOptionsToClass{\CurrentOption}{article}}
+\DeclareOption{print}{\def\@cv@print{}}
+\DeclareOption*{
+  \PassOptionsToClass{\CurrentOption}{article}%
+}
 \ProcessOptions\relax
 \LoadClass{article}
 
-\usepackage[hmargin=0.75cm, vmargin=0.75cm]{geometry} % Specifies horizontal and vertical page margins
-\usepackage{hyperref} % Required for links
+% Package Imports
+\usepackage[hmargin=1.25cm, vmargin=0.7cm]{geometry}
+\usepackage[usenames,dvipsnames]{xcolor}
+\usepackage[hidelinks]{hyperref}
+\usepackage{titlesec}
+\usepackage[absolute]{textpos}
+\usepackage{fontspec,xltxtra,xunicode}
 
-%----------------------------------------------------------------------------------------
-% COLORS
-%----------------------------------------------------------------------------------------
+% Cite publications
+\usepackage{cite}
+\renewcommand\refname{\vskip -1.5cm}
 
-\usepackage[usenames,dvipsnames]{xcolor} % Required for custom colors
+% Color definitions
+\definecolor{date}{HTML}{666666} 
+\definecolor{primary}{HTML}{2b2b2b} 
+\definecolor{headings}{HTML}{6A6A6A}
+\definecolor{subheadings}{HTML}{333333}
 
-\definecolor{primary}{HTML}{2b2b2b} % The primary document color for content text
-\definecolor{headings}{HTML}{6A6A6A} % The color of the large sections
-\definecolor{subheadings}{HTML}{333333} % The color of subsections and places worked/studied
-\definecolor{date}{HTML}{666666} % The color used for the Last Updated text at the top right
+% Set main fonts
+\defaultfontfeatures{Mapping=tex-text}
+\setmainfont[Color=primary]{Helvetica Light}
+\setsansfont[Scale=MatchLowercase,Mapping=tex-text]{Helvetica Neue UltraLight}
 
-%----------------------------------------------------------------------------------------
-% FONTS
-%----------------------------------------------------------------------------------------
-
-\usepackage{fontspec} % Required for specifying custom fonts in XeLaTeX
-
-\setmainfont[Color=primary, Path = fonts/lato/,BoldItalicFont=Lato-RegIta,BoldFont=Lato-Reg,ItalicFont=Lato-LigIta]{Lato-Lig} % The primary font for content text; defines bold, italic and bold-italic as well
-
-\setsansfont[Scale=MatchLowercase,Mapping=tex-text, Path = fonts/raleway/]{Raleway-ExtraLight} % The font used where \sfffamily is called
-
-%----------------------------------------------------------------------------------------
-% LAST UPDATED COMMAND
-%----------------------------------------------------------------------------------------
-
-\usepackage[absolute]{textpos} % Required for positioning the Last Updated text at the top right of the page
-\usepackage[UKenglish]{isodate} % Prints the Last Updated date in UK English format
-
-\setlength{\TPHorizModule}{0.01\paperwidth} % Sets the units for the horizontal position used in the \begin{textblock} argument
-\setlength{\TPVertModule}{0.01\paperwidth} % Sets the units for the vertical position used in the \begin{textblock} argument
-\newcommand{\lastupdated}{ % Create a new command for printing the Last Updated text
-\begin{textblock}{25}(75,2) % The position of the Last Updated text on the page (75% of the page across, 2% down)
-\color{date}\fontspec[Path = fonts/raleway/]{Raleway-ExtraLight}\fontsize{8pt}{10pt}\selectfont % Text styling of the text
-Last Updated on \today % Last Updated text
+% Date command
+\setlength{\TPHorizModule}{1mm}
+\setlength{\TPVertModule}{1mm}
+\textblockorigin{0mm}{5mm} % start everyth
+\newcommand{\lastupdated}{\begin{textblock}{60}(155,0)
+\color{date}\fontspec{Helvetica Neue Light}\fontsize{8pt}{10pt}\selectfont 
+Last Updated on
+\today
 \end{textblock}}
 
-%----------------------------------------------------------------------------------------
-% MAIN HEADING COMMAND
-%----------------------------------------------------------------------------------------
+\newcommand{\leftdetails}[1]{\begin{textblock}{60}(170,5)
+\color{date}\fontspec{Helvetica Neue Light}\fontsize{8pt}{10pt}\selectfont 
+#1
+\end{textblock}}
 
-\newcommand{\namesection}[3]{ % Defines the command for the main heading
-\centering{ % Center the name
-\fontsize{40pt}{60pt} % Font size
-\fontspec[Path = fonts/lato/]{Lato-Hai}\selectfont #1 % First name font
-\fontspec[Path = fonts/lato/]{Lato-Lig}\selectfont #2 % Last name font
-} \\[5pt] % Whitespace between the name and contact information
-\centering{ % Center the contact information
-\color{headings} % Use the headings color
-\fontspec[Path = fonts/raleway/]{Raleway-Medium}\fontsize{11pt}{14pt}\selectfont #3} % Contact information font
-\noindent\makebox[\linewidth]{\color{headings}\rule{\paperwidth}{0.4pt}} % Horizontal rule
-\vspace{-5pt} % Reduce whitespace after the rule slightly
+
+% Name command
+\newcommand{\namesection}[3]{
+	\centering{
+		\sffamily
+		\fontspec{Helvetica Neue UltraLight}\fontsize{40pt}{10cm}\selectfont #1 
+		\fontspec{Helvetica Neue Light}\selectfont #2
+	} \\
+	\vspace{5pt}
+	\centering{ \color{headings}\fontspec{Heiti TC Medium}\fontsize{11pt}{14pt}\selectfont #3}
+	\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+	\vspace{-15pt}
 }
+\titlespacing{\section}{0pt}{0pt}{0pt}
 
-%----------------------------------------------------------------------------------------
-% SECTION TITLE STYLING AND SPACING
-%----------------------------------------------------------------------------------------
+% Headings command
+\titleformat{\section}{\color{headings}
+\scshape\fontspec{Helvetica Light}\fontsize{16pt}{24pt}\selectfont \raggedright\uppercase}{} {0em}{}
 
-\usepackage{titlesec} % Required for customizing section/subsection/etc titles
+% Subeadings command
+\titleformat{\subsection}{\color{subheadings}
+\fontspec{Helvetica}\fontsize{12pt}{12pt}\selectfont\bfseries\uppercase}{}{0em}{}
+\titlespacing{\subsection}{0pt}{\parskip}{-\parskip}
+\titlespacing{\subsubsection}{0pt}{\parskip}{-\parskip}
+\newcommand{\runsubsection}[1]{\color{subheadings}
+\fontspec{Helvetica}\fontsize{12pt}{12pt}\selectfont\bfseries\uppercase {#1} \normalfont}
 
-\titlespacing{\section}{0pt}{0pt}{0pt} % Removes the spacing around the main section titles
-\titlespacing{\subsection}{0pt}{0pt}{0pt} % Removes the spacing around the subsections
-\newcommand{\sectionspace}{\vspace{8pt}} % Defines a command to add a set amount of space after sections and subsections
+% Descriptors command
+\newcommand{\descript}[1]{\color{subheadings}\raggedright\scshape\fontspec{Heiti SC Medium}\fontsize{11pt}{13pt}\selectfont {#1 \\} \normalfont}
 
-\titleformat{\section}{ % Customize the large section titles
-\color{headings}\scshape\fontspec[Path = fonts/lato/]{Lato-Lig}\fontsize{16pt}{24pt}\selectfont \raggedright\uppercase}{}{0em}{}
+% Location command
+\newcommand{\location}[1]{\color{headings}\raggedright\scshape\fontspec{Heiti TC Medium}\fontsize{10pt}{12pt}\selectfont {#1\\} \normalfont}
 
-\titleformat{\subsection}{ % Customize the subsections and places worked/studied titles
-\color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{12pt}{12pt}\selectfont\bfseries\uppercase}{}{0em}{}
+% Section seperators command
+\newcommand{\sectionsep}[0]{\vspace{8pt}}
 
-\newcommand{\runsubsection}[1]{ % Used for creating subsections where a description is required on the same line
-\color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{12pt}{12pt}\selectfont\bfseries\uppercase {#1} \normalfont}
-
-\newcommand{\descript}[1]{ % Used for describing the subsection either on the same line or underneath
-\color{subheadings}\raggedright\scshape\fontspec[Path = fonts/raleway/]{Raleway-Medium}\fontsize{11pt}{13pt}\selectfont {#1 \\} \normalfont}
-
-\newcommand{\location}[1]{ % Used for specifying a duration and/or location under a subsection
-\color{headings}\raggedright\fontspec[Path = fonts/raleway/]{Raleway-Medium}\fontsize{10pt}{12pt}\selectfont {#1\\} \normalfont}
-
-%----------------------------------------------------------------------------------------
-% SECTION TITLE STYLING AND SPACING
-%----------------------------------------------------------------------------------------
-
-\newenvironment{tightitemize} % Defines the tightitemize environment which modifies the itemize environment to be more compact
-{\vspace{-\topsep}\begin{itemize}\itemsep1pt \parskip0pt \parsep0pt}
-{\end{itemize}\vspace{-\topsep}}
+% Bullet Lists with fewer gaps command
+\newenvironment{tightemize}{\vspace{-\topsep}\begin{itemize}\itemsep1pt \parskip0pt \parsep0pt}{\end{itemize}\vspace{-\topsep}}
