--- a/resume.tex
+++ b/resume.tex
@@ -26,7 +26,7 @@
 
 \subsection{Rice University}
 
-\descript{BS in Computer Science, Statistics}
+\descript{Bachelor of Science in Computer Science, Statistics}
 \location{Aug 2012 - May 2016 \\ GPA: 3.7}
 
 %------------------------------------------------
@@ -46,7 +46,7 @@
 \textbullet{} Data Structures\\
 \textbullet{} Advanced Algorithms\\
 
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 \subsection{Statistics}
 \textbullet{} Data Mining\\
@@ -55,7 +55,7 @@
 \textbullet{} Regression Analysis\\
 \textbullet{} Bioinformatics\\
 
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 %------------------------------------------------
 % Skills
@@ -75,17 +75,17 @@
 \textbullet{} C\\
 \textbullet{} C++
 
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 \subsection{Frameworks}
-\textbullet{} Spring\\
+\textbullet{} Spring/SpringBoot\\
 \textbullet{} Angular\\
 \textbullet{} React\\
 \textbullet{} AWS\\
 \textbullet{} Android\\
 \textbullet{} iOS\\
 
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 \subsection{Github}
 \textbullet{} https://github.com/yaylinda
@@ -108,64 +108,45 @@
 \section{Experience}
 
 \runsubsection{Capital One}
-\descript{| Software Engineer}
+\descript{| Software Engineer (Team: DataDragons)}
 
-\location{July 2016 - Present | Plano, TX}
+\location{July 2018 - Present | Plano, TX}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightitemize}
-\item Promotion from Associate to Senior Associate after 1 year.
-\item Developed standalone Angular Widget that was easily integrated with all Financial Services applications to capture customer feedback. (Java, Angular, AWS, PostgreSQL, Splunk).
-\item Built ad-hoc data analysis platform using open-source Apache Zeppelin. Added additional features: connection to Redshift Clusters, schema browser, SQL parser/linter/visualizer. (Java, Angular, AWS, Redshift, ElasticSearch, Spark, R, Python).
-\item Implemented system for Call Center agents to record notes about customer communications for chats and phone calls. (Java, Angular, AWS, PostgreSQL).
-\item Designed and implemented Automated Handwriting System using RNN Machine Learning Algorithms, with UI, server, and polling client to write greeting cards to long-term customers (Python, Tensorflow, Angular, AxiDraw V3).
-\item Developed enterprise-wide API for Cloud file storage abstraction. Built as part of a larger initiative to resolve storage space issues in the on-premise Data Center. (Java, AWS, S3, SQL).
-\item Designed and implemented automated data migration system with weekly queries to extract files from on-premise Data Center and move them to the Cloud with unique IDs for fast retrieval. (Java, AWS, S3, SQS, CFT, SQL). 
-\end{tightitemize}
 
-\sectionspace % Some whitespace after the section
+\begin{tightemize}
+\item Developed a First Party Ad Server that works with Google AdSense to serve dynamically rendered, individually customized vehicle ads based on information from Capital One cookie values. Ad Server also parses data from the source website, such as vehicle make and model, body type, to serve ads with matching vehicles within the user's area. API responds within 50ms per call. (Java, ECS, Redis, HTML/CSS, Mustache)
+\item Maintains Webflux API that retrieves over 250+ customer attributes for  a given Capital One cookie value or Capital One customer ID. API responds in ~5ms per call. This API is central to the whole team's projects. (Java, ECS, Redis, Spring Webflux)
+\item Designed and developing enterprise-wide platform for automated, real-time, always-on, intelligent marketing campaigns. Comprised of 10+ microservices, including database design and UI/UX development. I am the primary developer and owner of four of the 10+ microservices, one of the three databases, and also a frontend developer for one of the components. (Java, MemSQL, PostgreSQL, Javascript, WebComponents, AWS)
+\item Instrumented application metrics for the entire team, over 10 microservices, using the Prometheus framework. Authored rules for PagerDuty alerts based on metrics, with Slack integration. (Prometheus, PromQL, Slack) 
+\end{tightemize}
 
-%------------------------------------------------
+\sectionsep % Some whitespace after the section
 
-\runsubsection{Shape Security}
-\descript{| KPCB Fellow + Software Engineering Intern}
+\runsubsection{Capital One}
+\descript{| Software Engineer (Team: Innovaniacs)}
+\location{July 2017 - July 2018 | Plano, TX}
 
-\location{May 2015 - Aug 2015 | Mountain View, CA}
-\begin{tightitemize}
-\item One of 60 out of 2500+ applicants chosen to be a Kleiner, Perkins, Caufield and Byers Engineering Fellow of 2015
-\item Upgraded Shape's open-source project, to support tooling for ECMAScript 2015. (Java, Javascript).
-\item Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer.
-\end{tightitemize}
+\begin{tightemize}
+\item Implemented API and UI for Call Center agents to capture notes from customer communications. (Java, Angular, AWS, PostgreSQL)
+\item Designed and implemented Automated Handwriting System using RNN Machine Learning Algorithms, with UI, server, and polling client to write greeting cards to customers. (Python, Tensorflow, Angular, AxiDraw V3)
+\item Developed enterprise-wide API for Cloud file storage abstraction. (Java, AWS, S3, SQL)
+\item Designed and developed an automated data migration system with weekly queries to extract files from the on-premise Data Center and transfer to the Cloud with unique IDs for fast retrieval. (Java, ECS, S3, SQS, CFT, SQL)
+\end{tightemize}
 
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
-%------------------------------------------------
+\runsubsection{Capital One}
+\descript{| Associate Software Engineer (Team: Myself and DataDragons)}
+\location{July 2016 - July 2017 | Plano, TX}
 
-\runsubsection{PROS}
-\descript{| Software Engineering Intern}
+\begin{tightemize}
+\item Developed Angular Widget that was easily integrated with all Financial Services applications to capture customer feedback. (Java, Angular, AWS, PostgreSQL, Splunk)
+\item Built ad-hoc data analysis platform using open-source Apache Zeppelin. Implemented features: connection to Redshift Clusters, schema browser, SQL parser/linter/visualizer. (Java, Angular, AWS, Redshift, ElasticSearch, Spark, R, Python)
+\end{tightemize}
 
-\location{May 2014 - Aug 2014 | Houston, TX}
-\begin{tightitemize}
-\item Built tool to parse log files of various business systems and interactively display data using ELK stack.
-\item Built nightly email task to summarize flight booking statistics, using map-reduce algorithms in Java with a Cassandra database. (Java, Cassandra).
-\item Created APIs for Notification Service and Notes Service for Travel Agent System. (Java).
-\item Built validation utility to validate input data from users. (Java, SQL).
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 %------------------------------------------------
-
-\runsubsection{Jones McClure Publishing}
-\descript{| Software Engineering Intern}
-
-\location{June 2013 - Sep 2013 | Houston, TX}
-\begin{tightitemize}
-\item Built two dynamic web applications and mobile-compatible versions: Income Tax Calculator, Child Support Calculator. (C\#, Javascript/HTML/CSS).
-\item Built Administration site to track and display internal business data. (C\#, Javascript/HTML/CSS).
-\item Wrote plug-in for FogBugs that allows non-IT employees to report bugs within the software to the Engineering Team.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
 
 %----------------------------------------------------------------------------------------
 
@@ -186,6 +167,45 @@
 \begin{minipage}[t]{0.7\textwidth} % The right column takes up 66% of the text width of the page
 
 %------------------------------------------------
+% Experience
+%------------------------------------------------
+
+\section{Internships}
+
+\runsubsection{Shape Security}
+\descript{| KPCB Fellow + Software Engineering Intern}
+\location{May 2015 - Aug 2015 | Mountain View, CA}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+
+One of 60 out of 2500+ applicants chosen to be a Kleiner, Perkins, Caufield and Byers Engineering Fellow of 2015. Interned at Shape Security, one of KPCB's portfolio companies. There, I upgraded Shape Security's open-source project, to support tooling for ECMAScript 6, which was just coming out at the time. Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer. So I could write Java to generate JavaScript code! At the end of the summer, I presented my experience at the South Bay JavaScript Meetup, hosted by Shape Security. 
+
+\sectionsep % Some whitespace after the section
+
+%------------------------------------------------
+
+\runsubsection{PROS}
+\descript{| Software Engineering Intern}
+
+\location{May 2014 - Aug 2014 | Houston, TX}
+Worked on three distinct projects during my internship:
+Project \#1 - Implemented ElasticSearch, LogStash, Kibana stack for various application logs. (ELK)
+Project \#2 - Built nightly task that summarizes flight booking statistics and sends analytics email, using map-reduce algorithms. (Java, Cassandra)
+Project \#3 - Created APIs for Notification and Notes Services for a Travel Agent System. (Java)
+
+\sectionsep % Some whitespace after the section
+
+%------------------------------------------------
+
+\runsubsection{Jones McClure Publishing}
+\descript{| Software Engineering Intern}
+
+\location{June 2013 - Sep 2013 | Houston, TX}
+Built two dynamic web applications and mobile-compatible versions: Income Tax Calculator, Child Support Calculator. (C\#, Javascript/HTML/CSS). Also built an Administration site to track and display internal business data. (C\#, Javascript/HTML/CSS).
+
+
+\sectionsep % Some whitespace after the section
+
+%------------------------------------------------
 % Other projects
 %------------------------------------------------
 
@@ -196,10 +216,10 @@
 \runsubsection{Simple War}
 \descript{| Personal Project}
 
-\location{2018 | Anywhere}
-REST-ful, turn-based game with online match-making. Front-end built in Angular 4, with Java as the API and game-engine layer, MongoDB for game data storage, and websockets for real-time game-board updates. Players take turns placing cards (troops, walls, special) on the board. Player wins when a certain number of points have been scored. Points are earned from successfully moving troops across the board to the opponent's side, while the opponent places cards to stop advancement. 
+\location{2018-Present | Anywhere}
+REST-ful, turn-based game with online match-making. Front-end built in Angular 4, with Java as the API and game-engine layer, MongoDB for game data storage, and websockets for real-time game-board updates. Players take turns placing cards (troops, walls, special) on the board. Player wins when a certain number of points have been scored. Points are earned from successfully moving troops across the board to the opponent's side, while the opponent places cards to stop advancement. \href{http://3.85.160.165:4200/}{Give it a try (looks better in half-screen)}.
 
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 %------------------------------------------------
 \runsubsection{Parking Navigator}
@@ -208,7 +228,7 @@ REST-ful, turn-based game with online match-making. Front-end built in Angular 4
 \location{Aug 2017 | Plano, TX}
 Project for internal Hackathon hosted by Capital One. Drone flies around campus on a pre-set path, taking aerial shots of parking lot. Sends pictures to server for processing, using edge detection to find empty parking spots. 
 
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 %------------------------------------------------
 
@@ -218,46 +238,17 @@ Project for internal Hackathon hosted by Capital One. Drone flies around campus 
 \location{Jan 2016 - May 2016 | Houston, TX}
 Analyzed ECoG data of brain frequencies obtained from 42 nodes placed on the brain of an epileptic patient while the patient watched videos of a person saying "rock" or "rain" with blurry or clear visual and audio. Goal was to be able to classify the type of stimuli based on the brain frequencies data. Used 3D and 4D Higher Order Partial Least Squares Methods for analysis. Found strong effects of priming in the brain (audio section of the brain became activated when visual start even if there is no audio yet, and vice-versa).
 
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-\runsubsection{Recommendation System Competition}
-\descript{| Term Project}
-
-\location{Sep 2015 - Dec 2015 | Houston, TX}
-Class competition to build a system with the best recommendations for online dating profiles based on users' past ratings, using various statistical learning algorithms.
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-
-\runsubsection{Pac-Mite Competition}
-\descript{| Term Project}
-
-\location{Sep 2015 - Dec 2015 | Houston, TX}
-Class competition to find the best gene for a PAC-Mite species, using various AI and search algorithms that we learned throughout the semester.
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-
-\runsubsection{ChimeHack 2}
-\descript{| Hackathon Participant + Honorable Mention}
-
-\location{July 2015 | San Francisco, CA}
-Built an Android app that detects certain signals/gestures and sends a customized distress message to selected contacts.
-
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 %------------------------------------------------
 
 \runsubsection{Computer Game Creation}
-\descript{| Term Project}
+\descript{| Senior Project}
 
 \location{Jan 2015 - May 2015 | Houston, TX}
-Multi-player, cross-platform game, combining the game-play mechanics of Doodle Jump, and competitive nature of Mario Kart.
+Multi-player, cross-platform game, combining the game-play mechanics of Doodle Jump, and competitive nature of Mario Kart. The game is called \href{http://poporopo.nimbusmog.com}{"Poporopo"} (looks better in half-screen).
 
-\sectionspace % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 \end{minipage} % The end of the right column
 
