--- a/resume.tex
+++ b/resume.tex
@@ -8,8 +8,8 @@
 
 \lastupdated % Print the Last Updated text at the top right
 
-\namesection{Linda (Hanzhang)}{Zheng}{ % Your name
-\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242} % Your contacv information
+\namesection{Linda}{Zheng}{ % Your name
+\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242 | yaylinda.github.io/my-website-vue-v2} % Your contacv information
 }
 
 %----------------------------------------------------------------------------------------
@@ -78,10 +78,11 @@
 \sectionsep % Some whitespace after the section
 
 \subsection{Frameworks}
+\textbullet{} AWS\\
 \textbullet{} Spring/SpringBoot\\
+\textbullet{} Vue\\
 \textbullet{} Angular\\
 \textbullet{} React\\
-\textbullet{} AWS\\
 \textbullet{} Android\\
 \textbullet{} iOS\\
 
@@ -107,40 +108,54 @@
 
 \section{Experience}
 
-\runsubsection{Capital One}
-\descript{| Software Engineer (Team: DataDragons)}
+\runsubsection{Redfin}
+\descript{| Software Development Engineer II}
 
-\location{July 2018 - Present | Plano, TX}
+\location{Jan 2020 - Present | Frisco, TX}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 
 \begin{tightemize}
-\item Developed a First Party Ad Server that works with Google AdSense to serve dynamically rendered, individually customized vehicle ads based on information from Capital One cookie values. Ad Server also parses data from the source website, such as vehicle make and model, body type, to serve ads with matching vehicles within the user's area. API responds within 50ms per call. (Java, ECS, Redis, HTML/CSS, Mustache)
-\item Maintains Webflux API that retrieves over 250+ customer attributes for  a given Capital One cookie value or Capital One customer ID. API responds in ~5ms per call. This API is central to the whole team's projects. (Java, ECS, Redis, Spring Webflux)
-\item Designed and developing enterprise-wide platform for automated, real-time, always-on, intelligent marketing campaigns. Comprised of 10+ microservices, including database design and UI/UX development. I am the primary developer and owner of four of the 10+ microservices, one of the three databases, and also a frontend developer for one of the components. (Java, MemSQL, PostgreSQL, Javascript, WebComponents, AWS)
-\item Instrumented application metrics for the entire team, over 10 microservices, using the Prometheus framework. Authored rules for PagerDuty alerts based on metrics, with Slack integration. (Prometheus, PromQL, Slack) 
+\item Full-stack engineer on the Home Services team. Working with Java SpringBoot Microservices to develop RESTful API's, Kubernetes for Cloud Container deployment, Netflix Conductor for Microservice Orchestration, React for frontend development. 
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
 
+
 \runsubsection{Capital One}
-\descript{| Software Engineer (Team: Innovaniacs)}
-\location{July 2017 - July 2018 | Plano, TX}
+\descript{| Senior Software Engineer}
+
+\location{July 2019 - Jan 2020 | Plano, TX}
 
 \begin{tightemize}
-\item Implemented API and UI for Call Center agents to capture notes from customer communications. (Java, Angular, AWS, PostgreSQL)
-\item Designed and implemented Automated Handwriting System using RNN Machine Learning Algorithms, with UI, server, and polling client to write greeting cards to customers. (Python, Tensorflow, Angular, AxiDraw V3)
-\item Developed enterprise-wide API for Cloud file storage abstraction. (Java, AWS, S3, SQL)
-\item Designed and developed an automated data migration system with weekly queries to extract files from the on-premise Data Center and transfer to the Cloud with unique IDs for fast retrieval. (Java, ECS, S3, SQS, CFT, SQL)
+\item Designed and and developed Metadata Management Service. Designed system to discover metadata across entire corporation and with automated data pipeline to bring the data into team's internal database to be used for the marketing platform. Developed frontend application with various user roles to facilitate the data onboarding process. (Java, SpringBoot, Vue, PostgreSQL, MemSQL, AWS, ECS)
+\item Patent pending on dataset collation process to use data from multiple sources, with multiple cadences as consolidated dynamic view. (Java, SpringBoot, NodeJS, SQL)
+\item Continued maintenance and development on six microservices for marketing platform. (Java, SpringBoot, NodeJS, SQL)
+\item Demonstrated leadership by mentoring new team member on Vue development, and leading sub-team with detailed requirements and dates.
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
 
 \runsubsection{Capital One}
-\descript{| Associate Software Engineer (Team: Myself and DataDragons)}
+\descript{| Software Engineer}
+\location{July 2017 - July 2019 | Plano, TX}
+
+\begin{tightemize}
+\item Designed and developed an enterprise-wide platform for automated, real-time, always-on, intelligent marketing platform. Primary developer and owner of six microservices, and one of three frontend developers. (Java, SpringBoot, NodeJS, MemSQL, PostgreSQL, Javascript/Typescript, HTML/CSS, WebComponents, AWS)
+\item Developed an Ad Server integrated with Google AdSense to serve dynamically rendered, individually customized vehicle ads based on customer information. Intelligently parses vehicle make, model, and body type from source website to serve context-aware within the user's area. API responds within 50ms per call. Patent pending. (Java, SpringBoot, NodeJS, ECS, Redis, HTML/CSS, Mustache)
+\item Instrumented application metrics for over a dozen microservices, using Prometheus. Authored rules for PagerDuty alerts based on metrics, with Slack integration. (Prometheus, PromQL, Slack) 
+\item Implemented API and UI for Call Center agents to capture notes from customer communications. (Java, Angular, AWS, PostgreSQL)
+\item Designed and implemented Automated Handwriting System using RNN Machine Learning Algorithms, with UI, server, and polling client to write greeting cards to customers. (Python, Tensorflow, Angular, AxiDraw V3)
+\item Developed enterprise-wide API for Cloud file storage abstraction, and an automated data migration system to extract files from the on-premise Data Center to the Cloud with unique IDs for fast retrieval. (Java, ECS, S3, SQS, CFT, SQL)
+\end{tightemize}
+
+\sectionsep % Some whitespace after the section
+
+\runsubsection{Capital One}
+\descript{| Associate Software Engineer}
 \location{July 2016 - July 2017 | Plano, TX}
 
 \begin{tightemize}
-\item Developed Angular Widget that was easily integrated with all Financial Services applications to capture customer feedback. (Java, Angular, AWS, PostgreSQL, Splunk)
+\item Developed an Angular Widget for all Financial Services applications to capture customer feedback. (Java, SpringBoot, Angular, AWS, PostgreSQL, Splunk)
 \item Built ad-hoc data analysis platform using open-source Apache Zeppelin. Implemented features: connection to Redshift Clusters, schema browser, SQL parser/linter/visualizer. (Java, Angular, AWS, Redshift, ElasticSearch, Spark, R, Python)
 \end{tightemize}
 
@@ -175,7 +190,6 @@
 \runsubsection{Shape Security}
 \descript{| KPCB Fellow + Software Engineering Intern}
 \location{May 2015 - Aug 2015 | Mountain View, CA}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
 
 One of 60 out of 2500+ applicants chosen to be a Kleiner, Perkins, Caufield and Byers Engineering Fellow of 2015. Interned at Shape Security, one of KPCB's portfolio companies. There, I upgraded Shape Security's open-source project, to support tooling for ECMAScript 6, which was just coming out at the time. Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer. So I could write Java to generate JavaScript code! At the end of the summer, I presented my experience at the South Bay JavaScript Meetup, hosted by Shape Security. 
 
