--- a/resume.tex
+++ b/resume.tex
@@ -127,9 +127,10 @@
 \location{July 2019 - Jan 2020 | Plano, TX}
 
 \begin{tightemize}
-\item Designed and and developed Metadata Management Service. Designed system to discover metadata across entire corporation and with automated data pipeline to bring the data into team's internal database to be used for the marketing platform. Developed frontend application with various user roles to facilitate the data onboarding process. (Java, SpringBoot, Vue, PostgreSQL, MemSQL, AWS, ECS)
+\item Designed and and developed Metadata Management Service. Including discovering metadata across entire corporation, automated data pipeline to bring data into internal database to be used for the marketing platform. Developed frontend application with role-management to facilitate the data onboarding process. (Java, SpringBoot, Vue, PostgreSQL, MemSQL, AWS, ECS)
 \item Patent pending on dataset collation process to use data from multiple sources, with multiple cadences as consolidated dynamic view. (Java, SpringBoot, NodeJS, SQL)
-\item Continued maintenance and development on six microservices for marketing platform. (Java, SpringBoot, NodeJS, SQL)
+\item Patent pending on API introspection and invocation process. (Java, SpringBoot, OpenAPI Spec)
+\item Continued maintenance and development on six microservices for marketing platform.
 \item Demonstrated leadership by mentoring new team member on Vue development, and leading sub-team with detailed requirements and dates.
 \end{tightemize}
 
@@ -141,8 +142,8 @@
 
 \begin{tightemize}
 \item Designed and developed an enterprise-wide platform for automated, real-time, always-on, intelligent marketing platform. Primary developer and owner of six microservices, and one of three frontend developers. (Java, SpringBoot, NodeJS, MemSQL, PostgreSQL, Javascript/Typescript, HTML/CSS, WebComponents, AWS)
-\item Developed an Ad Server integrated with Google AdSense to serve dynamically rendered, individually customized vehicle ads based on customer information. Intelligently parses vehicle make, model, and body type from source website to serve context-aware within the user's area. API responds within 50ms per call. Patent pending. (Java, SpringBoot, NodeJS, ECS, Redis, HTML/CSS, Mustache)
-\item Instrumented application metrics for over a dozen microservices, using Prometheus. Authored rules for PagerDuty alerts based on metrics, with Slack integration. (Prometheus, PromQL, Slack) 
+\item Developed an Ad Server integrated with Google AdSense to serve dynamically rendered, individually customized vehicle ads based on customer information. Intelligently parses vehicle make, model, and body type from source website. Patent pending. (Java, SpringBoot, NodeJS, ECS, Redis, HTML/CSS, Mustache)
+\item Instrumented metrics for over a dozen microservices, using Prometheus. Authored rules for PagerDuty alerts based on metrics, with Slack integration. (Prometheus, PromQL, Slack) 
 \item Implemented API and UI for Call Center agents to capture notes from customer communications. (Java, Angular, AWS, PostgreSQL)
 \item Designed and implemented Automated Handwriting System using RNN Machine Learning Algorithms, with UI, server, and polling client to write greeting cards to customers. (Python, Tensorflow, Angular, AxiDraw V3)
 \item Developed enterprise-wide API for Cloud file storage abstraction, and an automated data migration system to extract files from the on-premise Data Center to the Cloud with unique IDs for fast retrieval. (Java, ECS, S3, SQS, CFT, SQL)
@@ -191,7 +192,7 @@
 \descript{| KPCB Fellow + Software Engineering Intern}
 \location{May 2015 - Aug 2015 | Mountain View, CA}
 
-One of 60 out of 2500+ applicants chosen to be a Kleiner, Perkins, Caufield and Byers Engineering Fellow of 2015. Interned at Shape Security, one of KPCB's portfolio companies. There, I upgraded Shape Security's open-source project, to support tooling for ECMAScript 6, which was just coming out at the time. Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer. So I could write Java to generate JavaScript code! At the end of the summer, I presented my experience at the South Bay JavaScript Meetup, hosted by Shape Security. 
+One of 60 out of 2500+ applicants chosen to be a Kleiner Perkins Caufield and Byers Engineering Fellow of 2015. Interned at Shape Security, one of KPCB's portfolio companies. There, I upgraded Shape Security's open-source project, to support tooling for ECMAScript 6, which was just coming out at the time. Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer. So I could write Java to generate JavaScript code! At the end of the summer, I presented my experience at the South Bay JavaScript Meetup, hosted by Shape Security. 
 
 \sectionsep % Some whitespace after the section
 
@@ -231,7 +232,7 @@ Built two dynamic web applications and mobile-compatible versions: Income Tax Ca
 \descript{| Personal Project}
 
 \location{2018-Present | Anywhere}
-REST-ful, turn-based game with online match-making. Front-end built in Angular 4, with Java as the API and game-engine layer, MongoDB for game data storage, and websockets for real-time game-board updates. Players take turns placing cards (troops, walls, special) on the board. Player wins when a certain number of points have been scored. Points are earned from successfully moving troops across the board to the opponent's side, while the opponent places cards to stop advancement. \href{http://3.85.160.165:4200/}{Give it a try (looks better in half-screen)}.
+REST-ful, turn-based game with online match-making. Java SpringBoot backend API with MongoDB for game data storage, and websockets for real-time game-board updates. Several versions of the client: Angular2, Flutter, Vue (current). Players take turns placing cards (troops, walls, special) on the board. Player wins when a certain number of points have been scored. Points are earned from successfully moving troops across the board to the opponent's side, while the opponent places cards to stop advancement. \href{yaylinda.github.io/my-website-vue-v2/simple-war}{Give it a try!}
 
 \sectionsep % Some whitespace after the section
 
